# PUT-PRoz

./: CMakeLists.txt  Makefile  README.md  common.cpp  common.h  main  main.cpp  main.h  utils.cpp  utils.h
data/: config.h  processData.cpp  processData.h
threads/: communication_thread.cpp  communication_thread.h  main_thread.cpp  main_thread.h
