cmake_minimum_required(VERSION 3.13)  # CMake version check
project(simple_example)               # Create project "simple_example"
set(CMAKE_CXX_STANDARD 14)            # Enable c++14 standard

# Add main.cpp file of project root directory as source file
set(SOURCE_FILES main.cpp)

add_executable(main.cpp common.cpp utils.cpp data/processData.cpp threads/communication_thread.cpp threads/main_thread.cpp main.cpp)
